finished the home screen and the responsive design for it on mobile view and tablet view , also fixed the issue of the footer's color and the home-container

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-  background-color: #424250;
+  background-color: white;
 
   padding: 1rem;
 }
@@ -25,7 +25,7 @@
   color: #8c8b97;
 }
 .main-footer h3 {
-  color: white;
+  color: #424250;
   text-align: center;
 }
 
@@ -41,11 +41,11 @@
 
 .footer-list a {
   text-decoration: none;
-  color: white;
+  color: #424250;
 }
 
 .break {
-  color: white;
+  color: #424250;
   width: 70px;
 }
 
@@ -54,7 +54,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: #424250;
 }
 .social-media {
   display: flex;
@@ -73,7 +73,8 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background-color: white;
+  background-color: #424250;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
